# plant-cv

./: .env.example  .gitignore  Dockerfile  README.md  compose.yml  docker-compose.yml  example.py  process_data_dirs.py  process_test_images.py  pyproject.toml  test.sh
.devcontainer/: devcontainer.json
api/embeddings/: Dockerfile  README.md  pyproject.toml
api/embeddings/app/: main.py
api/embeddings/tests/: test_main.py
api/grounding_dino/: Dockerfile  pyproject.toml
api/grounding_dino/app/: main.py
api/grounding_dino/tests/: test_main.py
api/pipeline/: Dockerfile  pyproject.toml
api/pipeline/app/: analysis.py  cv_utils.py  detect.py  main.py  propagate.py  utils.py
api/pipeline/app/plant/: detect.py  routes.py  segment.py  stats.py  visualization.py  visualize.py
api/pipeline/app/pot/: detect.py  quad.py  routes.py  segment.py  utils.py  visualization.py  visualize.py  warp.py
api/pipeline/tests/: debug_pot.py  sweep_dataset.py  test_analysis.py  test_benchmark_parallel.py  test_detect.py  test_main.py  test_pot_counts.py  test_tracking.py  utils.py
api/pipeline/tests/plant/: test_detect.py  test_visualize.py
api/sam3/: Dockerfile  README.md  pyproject.toml
api/sam3/app/: caching.py  main.py  utils.py
api/sam3/tests/: test_main.py  test_persistence.py
api/segment_anything/: Dockerfile  pyproject.toml
api/segment_anything/app/: main.py
api/segment_anything/tests/: test_main.py
scripts/: add_flowering_labels.py  bulk_pipeline_client.py  test_pipeline_service.py
