[project]
name = "sam3-service"
version = "0.1.0"
description = "SAM 3.1 Video Tracking API for plant CV pipeline"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "litserve>=0.2.8",
    "numpy>=1.26,<2",
    "opencv-python>=4.5.0",
    "pillow>=11.2.1",
    "torch>=2.7.0",
    "torchvision",
    "lz4>=4.0",
    "huggingface_hub",
    # Native SAM 3.1 (pure-Python; HF is only a checkpoint CDN). Pinned because we depend
    # on internal APIs (_run_single_frame_inference, MultiplexState, FindStage).
    "sam3",
    # Runtime deps the sam3 wheel under-declares (its import chain pulls train.data etc.).
    "einops",
    "pycocotools",
    "psutil",
    "pandas",
    "python-rapidjson",
    "numba",
    "decord",
    "scipy",
]

[tool.uv.sources]
sam3 = { git = "https://github.com/facebookresearch/sam3", rev = "5dd401d1c5c1d5c3eedff06d41b77af824517619" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-benchmark>=5.2.3",
]
