[project]
name = "segment-anything"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "litserve>=0.2.8",
    "numpy>=1.24.0",
    "opencv-python>=4.5.0",
    "pillow>=11.2.1",
    "sam-2",
    "torch>=2.7.0",
    "transformers>=4.51.2",
]

[tool.uv.sources]
sam-2 = { git = "https://github.com/facebookresearch/segment-anything-2" }
